Returning mutable list of tasks